azureps-cmdlets-docs/ResourceManager/AzureRM.Compute/v2.7.0/Save-AzureRmVhd.md
---
external help file: Microsoft.Azure.Commands.Compute.dll-Help.xml
ms.assetid: 18E1AD70-42A6-47A2-A685-6E218B6DC4BE
online version:
schema: 2.0.0
content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/3.6.0/src/ResourceManager/Compute/Commands.Compute/help/Save-AzureRmVhd.md
original_content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/3.6.0/src/ResourceManager/Compute/Commands.Compute/help/Save-AzureRmVhd.md
gitcommit: https://github.com/Visual-Studio-China/azure-powershell/blob/94e42834e29c78cafba9e3f1e99e14af92561036
---

# Save-AzureRmVhd

## SYNOPSIS
Saves downloaded .vhd images locally.

## SYNTAX

### ResourceGroupParameterSetName
```
Save-AzureRmVhd [-ResourceGroupName] <String> [-SourceUri] <Uri> [-LocalFilePath] <FileInfo>
 [[-NumberOfThreads] <Int32>] [-OverWrite] [<CommonParameters>]
```

### StorageKeyParameterSetName
```
Save-AzureRmVhd [-StorageKey] <String> [-SourceUri] <Uri> [-LocalFilePath] <FileInfo>
 [[-NumberOfThreads] <Int32>] [-OverWrite] [<CommonParameters>]
```

## DESCRIPTION
The **Save-AzureRmVhd** cmdlet saves .vhd images from a blob where they are stored to a file.
You can specify the number of downloader threads that the process uses and whether to replace a file that already exists.

This cmdlet downloads content as it is.
It does not apply any Virtual Hard Disk (VHD) format conversion.

## EXAMPLES

### Example 1: Download an image
```
PS C:\>Save-AzureRmVhd -Source "http://contosoaccount.blob.core.windows.net/vhdstore/win7baseimage.vhd" -LocalFilePath "C:\vhd\Win7Image.vhd"
```

This command downloads a .vhd file, and stores it in the local path C:\vhd\Win7Image.vhd.

### Example 2: Download an image and overwrite the local file
```
PS C:\>Save-AzureRmVhd -Source "http://contosoaccount.blob.core.windows.net/vhdstore/win7baseimage.vhd" -LocalFilePath "C:\vhd\Win7Image.vhd" -Overwrite
```

This command downloads a .vhd file, and stores it in the local path.
The command includes the *Overwrite* parameter.
Therefore, if C:\vhd\Win7Image.vhd already exists, this command replaces it.

### Example 3: Download an image by using a specified number of threads
```
PS C:\>Save-AzureRmVhd -Source "http://contosoaccount.blob.core.windows.net/vhdstore/win7baseimage.vhd" -LocalFilePath "C:\vhd\Win7Image.vhd" -NumberOfThreads 32
```

This command downloads a .vhd file, and stores it in the local path.
The command specifies a value of 32 for the *NumberOfThreads* parameter.
Therefore, the cmdlet uses 32 threads for this action.

### Example 4: Download an image and specify the storage key
```
PS C:\>Save-AzureRmVhd -Source "http://contosoaccount.blob.core.windows.net/vhdstore/win7baseimage.vhd" -LocalFilePath "C:\vhd\Win7Image.vhd" -StorageKey "zNvcH0r5vAGmC5AbwEtpcyWCMyBd3eMDbdaa4ua6kwxq6vTZH3Y+sw=="
```

This command downloads a .vhd file and specifies the storage key.

## PARAMETERS

### -LocalFilePath
Specifies the local file path of the saved image.

```yaml
Type: FileInfo
Parameter Sets: (All)
Aliases: lf

Required: True
Position: 3
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -NumberOfThreads
Specifies the number of download threads that this cmdlet uses during download.

```yaml
Type: Int32
Parameter Sets: (All)
Aliases: th

Required: False
Position: 4
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -OverWrite
Indicates that this cmdlet replaces the file specified by *LocalFilePath* file if it exists.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: o

Required: False
Position: 5
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ResourceGroupName
Specifies the name of the resource group of the virtual machine.

```yaml
Type: String
Parameter Sets: ResourceGroupParameterSetName
Aliases: 

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -SourceUri
Specifies the Uniform Resource Identifier (URI) of the blob in `Azure`.

```yaml
Type: Uri
Parameter Sets: (All)
Aliases: src, Source

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -StorageKey
Specifies the storage key of the blob storage account.
If you do not specify a key, this cmdlet attempts to determine the storage key of the account in *SourceUri* from Azure.

```yaml
Type: String
Parameter Sets: StorageKeyParameterSetName
Aliases: sk

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[Add-AzureRmVhd](./Add-AzureRMVhd.md)


